--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
 <tr>
 <td><a href="https://hongyangdu.github.io/GDMOPT/"><img class="responsive-img" style="vertical-align:middle" src="accessories/GDMOPT1.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
-<b>Enhancing Deep Reinforcement Learning: A Tutorial on Generative Diffusion Models in Network Optimization</b>
+<b>Beyond Deep Reinforcement Learning: A Tutorial on Generative Diffusion Models in Network Optimization</b>
 <br>Hongyang Du, Ruichen Zhang, Yinqiu Liu, Jiacheng Wang, Yijing Lin, Zonghang Li, Dusit Niyato, Jiawen Kang, Zehui Xiong, Shuguang Cui, Bo Ai, Haibo Zhou, Dong In Kim<br>
 <em>IEEE COMST </em> <br>
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(245,50,190);">The first tutorial paper to explain various applications of diffusion models and coding examples.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-<a href="https://ieeexplore.ieee.org/abstract/document/10529221/">Paper</a> |
+<a href="https://arxiv.org/pdf/2308.05384.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://hongyangdu.github.io/GDMOPT/">Code</a> |
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
@@ -63,6 +63,20 @@
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
+
+<tr>
+<td><a href="https://z973230685.github.io/PLSMoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhaocy_moe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Enhancing Physical Layer Communication Security through Generative AI with Mixture of Experts</b>
+<br>Changyuan Zhao, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Xuemin (Sherman) Shen, Khaled B. Letaief<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores mixture of experts-enabled generative AI, focusing on physical layer communication security.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/pdf/2405.04198v1">Paper</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+	
 
 <tr>
 <td><a href="https://alvinliu97.github.io/MOEGAI-metaverse/"><img class="responsive-img" style="vertical-align:middle" src="accessories/MOE.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
@@ -78,26 +92,6 @@
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
-
-
-
-<tr>
-<td><a href="https://github.com/Yaoqi-Yang97/GAI4Game/"><img class="responsive-img" style="vertical-align:middle" src="accessories/GAI4GAME.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
-<td>
-<b>Exploring Equilibrium Strategies in Network Games with Generative AI</b>
-<br> Yaoqi Yang, Hongyang Du, Zehui Xiong, Dusit Niyato, Zhu Han<br>
-<em>Under Review</em> <br>
-<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the applications of generative AI in various stages of the game theory lifecycle, including model formulation, solution derivation, and strategy improvement. </b> </em> <br>
-<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-<a href="https://arxiv.org/abs/2405.08289">Paper</a>|
-<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-	<a href="https://github.com/Yaoqi-Yang97/GAI4Game/">Code</a>
-&nbsp &nbsp &nbsp 
-</td>
-</tr>
-
-
-	
 
 
 <tr>
@@ -535,19 +529,6 @@
 <a href="https://arxiv.org/pdf/2208.05438.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://hongyangdu.github.io/AttentionQoE/">Code</a>
-&nbsp &nbsp &nbsp 
-</td>
-</tr>
-
-<tr>
-<td><a href="https://arxiv.org/abs/2404.18077"><img class="responsive-img" style="vertical-align:middle" src="accessories/Carbon.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
-<td>
-<b>Generative AI for Low-Carbon Artificial Intelligence of Things</b>
-<br>Jinbo Wen, Ruichen Zhang, Dusit Niyato, Jiawen Kang, Hongyang Du, Yang Zhang, Zhu Han<br>
-<em>Under review</em> <br>
-<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);"> This paper explores the potential of GAI for carbon emissions reduction and proposes a novel GAI-enabled solution for low-carbon AIoT.</b> </em> <br>
-<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
-<a href="https://arxiv.org/abs/2404.18077.pdf">Paper</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
