--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2404.03321">Paper</a>|
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-	<a href="https://alvinliu97.github.io/MOEGAI-metaverse/">Code</a>
+<a href="https://alvinliu97.github.io/MOEGAI-metaverse/">Code</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Dm4y157yg/?spm_id_from=333.999.0.0">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -102,7 +106,7 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2405.08289">Paper</a>|
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-	<a href="https://github.com/Yaoqi-Yang97/GAI4Game/">Code</a>
+<a href="https://github.com/Yaoqi-Yang97/GAI4Game/">Code</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -118,6 +122,10 @@
 <a href="https://arxiv.org/pdf/2404.08878.pdf">Paper</a>|
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://zhewang77.github.io/GAIMIMO/">Code</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=FHvTjo2qmOY&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=1">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1wT421D7wM/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -132,6 +140,10 @@
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores the combination of LLM with game theory, focusing on mobile network optimization.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2404.09699">Paper</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1T1421d7cv/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -146,6 +158,10 @@
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">This paper proposed a framework for UAV networking, which augments with RAG and generative diffusion model.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/pdf/2404.10556.pdf">Paper</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=sXdapDkmmdQ&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=4">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1RZ421n7hc/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
