--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2404.09699">Paper</a>
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
-<a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
+<a href="https://www.youtube.com/watch?v=qfKsBIwJl5Q&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=5">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.bilibili.com/video/BV1T1421d7cv/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
