--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
-<a href="https://www.bilibili.com/video/BV1Dm4y157yg/?spm_id_from=333.999.0.0">Bilibili</a>
+<a href="https://www.bilibili.com/video/BV1rJ4m1N7wT/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
