--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
 <a href="https://arxiv.org/pdf/2402.06942.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://hongyangdu.github.io/Net4MoE/">Code</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=FtyX49zUfb4">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Kr421E7eE/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
@@ -234,6 +238,10 @@
 <a href="https://arxiv.org/pdf/2401.11391.pdf">Paper</a> |
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://rickyzang.github.io/GIAI/">Code</a>
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=ALh2Pc-uqbg">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1Tf42117rt/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
