--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://rickyzang.github.io/GIAI/">Code</a>
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
-<a href="https://www.youtube.com/watch?v=ALh2Pc-uqbg">YouTube</a> |
+<a href="https://youtu.be/ZUgpUf3MVkA">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.bilibili.com/video/BV1Tf42117rt/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
