--- a/index.html
+++ b/index.html
@@ -295,6 +295,19 @@
 </tr>
 
 <tr>
+<td><a href="https://arxiv.org/abs/2404.18077"><img class="responsive-img" style="vertical-align:middle" src="accessories/Carbon.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Generative AI for Low-Carbon Artificial Intelligence of Things</b>
+<br>Jinbo Wen, Ruichen Zhang, Dusit Niyato, Jiawen Kang, Hongyang Du, Yang Zhang, Zhu Han<br>
+<em>Under review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);"> This paper explores the potential of GAI for carbon emissions reduction and proposes a novel GAI-enabled solution for low-carbon AIoT.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2404.18077.pdf">Paper</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+	
+<tr>
 <td><a href="https://arxiv.org/abs/2309.01065"><img class="responsive-img" style="vertical-align:middle" src="accessories/yinqiuopt.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Optimizing Mobile-Edge AI-Generated Everything (AIGX) Services by Prompt Engineering: Fundamental, Framework, and Case Study</b>
@@ -329,6 +342,7 @@
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
+
 
 <tr>
 <td><a href="https://hongyangdu.github.io/SemSharing/"><img class="responsive-img" style="vertical-align:middle" src="accessories/duincen.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
