--- a/index.html
+++ b/index.html
@@ -63,6 +63,26 @@
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
+
+<tr>
+<td><a href="https://rickyzang.github.io/MASMoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/RC_MoE.jpg"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td>
+<b>Optimizing Generative AI Networking: A Dual Perspective with Multi-Agent Systems and Mixture of Experts</b>
+<br> Ruichen Zhang, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Ping Zhang, Dong In Kim<br>
+<em>Under Review</em> <br>
+<em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores a dual perspective multi-agent systems and mixture of experts for generative AI Networking.</b> </em> <br>
+<img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
+<a href="https://arxiv.org/abs/2405.12472">Paper</a>|
+<img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<a href="https://www.bilibili.com/video/BV1rJ4m1N7wT/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
+&nbsp &nbsp &nbsp 
+</td>
+</tr>
+
+
+
 	
 <tr>
 <td><a href="https://z973230685.github.io/PLSMoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhaocy_moe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
