--- a/index.html
+++ b/index.html
@@ -73,6 +73,8 @@
 <em> <img style="vertical-align:middle" src="accessories/gold_medal.png"  width="15" height="inherit"  alt="" /> <b style="color:rgb(100,70,200);">The paper explores a dual perspective multi-agent systems and mixture of experts for generative AI Networking.</b> </em> <br>
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2405.12472">Paper</a>|
+<img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
+<a href="https://rickyzang.github.io/MASMoE/">Code</a>
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
