--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
 <img style="vertical-align:middle" src="accessories/pdf.jpg"  width="12" height="inherit"  alt="" /> 
 <a href="https://arxiv.org/abs/2405.12472">Paper</a>|
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
-<a href="https://rickyzang.github.io/MASMoE/">Code</a>
+<a href="https://rickyzang.github.io/MASMoE/">Code</a> |
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
 <a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
-<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a>
+<img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a> 
 <a href="https://www.bilibili.com/video/BV1rJ4m1N7wT/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
