--- a/index.html
+++ b/index.html
@@ -76,9 +76,9 @@
 <img style="vertical-align:middle" src="accessories/github_icon.jpg"  width="15" height="inherit"  alt="" /> 
 <a href="https://rickyzang.github.io/MASMoE/">Code</a> |
 <img src="accessories/ytb.jpg"  width="12" height="inherit" alt=""></a>
-<a href="https://www.youtube.com/watch?v=txzwnzP3jjg&list=UULFEHDwNx-OAR0ER915ICtLpQ&index=2">YouTube</a> |
+<a href="https://www.youtube.com/watch?v=09wHgCCUTZc">YouTube</a> |
 <img src="accessories/bili.jpg"  width="12" height="inherit" alt=""></a> 
-<a href="https://www.bilibili.com/video/BV1rJ4m1N7wT/?vd_source=89dd8b52d1d8508a3722af991a8fa825">Bilibili</a>
+<a href="https://www.bilibili.com/video/BV1F142127yV/?spm_id_from=333.999.list.card_archive.click&vd_source=2952d487c9e1bfa4561a47411f9dc06a">Bilibili</a>
 &nbsp &nbsp &nbsp 
 </td>
 </tr>
