--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
 	
 <tr>
-<td><a href="https://z973230685.github.io/PLSMoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhaocy_moe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
+<td><a href="https://changyuanzhao.github.io/PLSMoE/"><img class="responsive-img" style="vertical-align:middle" src="accessories/zhaocy_moe.png"  width="200" height="inherit" border="1px" alt="" /></a></td>
 <td>
 <b>Enhancing Physical Layer Communication Security through Generative AI with Mixture of Experts</b>
 <br>Changyuan Zhao, Hongyang Du, Dusit Niyato, Jiawen Kang, Zehui Xiong, Dong In Kim, Xuemin (Sherman) Shen, Khaled B. Letaief<br>
